--- a/index.html
+++ b/index.html
@@ -22,39 +22,33 @@
           <li><a href="#">Cadastro</a></li>
         </ul>
       </nav>
-      <img id="logo" src="image/cafeAroma.png" alt="" />
+      <img id="logo" src="image/cafeAroma.png" alt=""/>
     </header>
     <main>
+
+      <img id="mulher" src="image/mulher.jpg" alt="mulher">
+
       <section id="container">
-        <article id="contact">
-          <h2>cafeAroma</h2>
+          <h2>Café Aroma</h2>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse
-            voluptatum porro dolor dolorum distinctio! Qui neque odio nesciunt
-            debitis repudiandae praesentium explicabo, rerum impedit optio aut,
-            inventore nam nobis? Fugiat. Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Voluptas, exercitationem quo? Eos tempora mollitia
-            numquam temporibus voluptates sunt quae tenetur doloremque, neque,
-            reprehenderit iusto ratione dolor aliquid animi, dolore maxime.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem
-            similique, ullam totam obcaecati ea quasi harum in corrupti adipisci
-            nesciunt dolores modi ipsam deleniti officia! Quisquam sapiente
-            veritatis impedit perspiciatis!
+            Descubra o sabor do café artesanal no Café Aroma! Aqui, cada xícara é preparada com grãos selecionados e torra especial para proporcionar a melhor experiência. Venha nos visitar e sinta o aroma de um café perfeito.
           </p>
-        </article>
       </section>
-      <nav id="menu">
-        <ul>
-          <li><a href="#">café preto</a></li>
-          <li><a href="#">café com leitinho</a></li>
-          <li><a href="#">café extraído das fezes do elefante</a></li>
-          <li><a href="#">café com canela</a></li>
-          <li><a href="#">café extra forte</a></li>
-          <li><a href="#">café para autistas</a></li>
-          <li><a href="#">café lgbt</a></li>
-        </ul>
-      </nav>
     </main>
-    <footer></footer>
+    <nav class="menu">
+      <ul>
+        <li><a href="#">café preto</a></li>
+        <li><a href="#">Brownie Artesanal</a></li>
+        <li><a href="#">Cappuccino</a></li>
+        <li><a href="#">Latte</a></li>
+        <li><a href="#">Croissant de Manteiga</a></li>
+        <li><a href="#">Espresso</a></li>
+        <li><a href="#">Mocha</a></li>
+      </ul>
+    </nav>
+    <footer>
+      <p>Contato: (15) 98165-4301</p>
+      <p>&copy; 2025 CafeAroma. Todos os direitos reservados.</p>
+    </footer>
   </body>
 </html>
