--- a/contato.html
+++ b/contato.html
@@ -1,26 +1,77 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/contato.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="teste.css" rel="stylesheet" href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="contato.html">
     <title>Contato</title>
-</head>
-<body>
-    <section>
-        <h1>Contato</h1>
+    <style>
+      body {
+        background-color: rgba(224, 196, 160, 0.473);
+      }
+      header {
+        margin: 0;
+        padding: 0;
+        height: 12vh;
+        width: 100%;
+      }
+
+    </style>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="sobre-nos.html">Sobre Nós</a></li>
+          <li><a href="cardapio.html">Cardápio</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+        <img src="image/cafeAroma.png" alt="Logo" />
+        <img src="" alt="">
+
+        <ul>
+            <li><a href="#">Entrar</a></li>
+            <li><a href="#">Cadastre-se</a></li>
+          </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Venha nos visitar ou fale conosco!</h1>
+      <p>
+        Estamos sempre prontos para te receber com um café quentinho e um
+        ambiente acolhedor.
+      </p>
+
+      <div>
+        <p>
+          <strong>📍Endereço: </strong>Rua das Especiarias, 123 – Sua Cidade
+          <br />
+          <strong>📞Telefone: </strong>(XX) XXXX-XXXX <br />
+          <strong>📧 E-mail: </strong>contato@cafearoma.com
+        </p>
+
+        <p><strong>💬 Ou envie uma mensagem pelo formulário abaixo!</strong></p>
+      </div>
+
+      <section>
         <form action="">
-            <label for="nome">Nome:</label>
-            <input type="text" name="nome" id="nome">
-            <br>
-            <label for="email">E-mail:</label>
-            <input type="email" name="email" id="email">
-            <br>
-            <label for="mensagem">Assunto:</label>
-            <textarea name="assunto" id="assunto" cols="30" rows="10"></textarea>
-            <br>
-            <button type="submit">Enviar</button>
+          <label for="nome">Nome:</label>
+          <input type="text" name="nome" id="nome" />
+          <br />
+          <label for="email">E-mail:</label>
+          <input type="email" name="email" id="email" />
+          <br />
+          <label for="mensagem">Assunto:</label>
+          <textarea name="assunto" id="assunto" cols="30" rows="8"></textarea>
+          <br />
+          <button type="submit">Enviar</button>
         </form>
-    </section>
-</body>
+      </section>
+    </main>
+
+    <footer><p>&copy; 2025 CafeAroma. Todos os direitos reservados.</p></footer>
+  </body>
 </html>
